--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore:
+  firebase_auth:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +45,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/MugiQT.png
+   - assets/mil02.png
+   - assets/mil03.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
